--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,6 @@
     {% django_htmx_script %}
   </head>
   <body>
-    <main>{% block content %} {% endblock %}</main>
+    <main>{% block 'content' %} {% endblock %}</main>
   </body>
 </html>
