Add style files

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}URL Shortener{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <script src="{% static 'js/htmx.min-1.9.4.js' %}" defer></script>
     {% django_htmx_script %}
   </head>
